--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,9 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.sass",
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": [
             ]
